--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-svg": "^12.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "sass": "^1.30.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -42,5 +43,19 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "main": "index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ktrahan2/personal-website.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ktrahan2/personal-website/issues"
+  },
+  "homepage": "https://github.com/ktrahan2/personal-website#readme",
+  "description": ""
 }
