--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-keyboard-event-handler": "^1.5.4",
     "react-native-svg": "^12.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
